--- a/app/views/admin_page/new.html.erb
+++ b/app/views/admin_page/new.html.erb
@@ -1,33 +1,54 @@
-
-<%= flash[:notice] %>
-
-<form id="myForm" action="admin_page/up" method="post">
-  
-  <select id="select">
+<select id="user_select">
     <option></option>
     </select>
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-</form>
-
+ 
 <%= form_for @user, :url => { :action => "up" }, :html => { :method => "put" } do |f| %>
 <%= f.submit 'Conferma', :name => "join" %>
 <input type="hidden" id="hidden" name="bo" value="no" />
 <% end %>
 
+<select id="local_select">
+    <option></option>
+    </select>
+ 
+<%= form_for @local, :url => { :action => "loc" }, :html => { :method => "put" } do |f| %>
+<%= f.submit 'Conferma', :name => "join" %>
+<input type="hidden" id="hidden_l" name="bo_l" value="no" />
+<% end %>
+
+<%= form_for :anything, :url => { :action => "suspend" }, :html => { :method => "put" } do |f| %>
+<%= f.submit 'Sospendi sito', :name => "join" %>
+<% end %>
 
 <script>
 
 
+
 var options = <%= @u.inspect.html_safe %>;
-$('#select').empty();
+$('#user_select').empty();
 $.each(options, function(i, p) {
-    $('#select').append($('<option></option>').val(p).html(p));
+    $('#user_select').append($('<option></option>').val(p).html(p));
 });
 
-$('select').change(alert_me_test);
+$('#user_select').change(user_f);
 
-  function alert_me_test(){
+  function user_f(){
+  		
   document.getElementById("hidden").value = this.value;
+  }
+
+
+var options = <%= @l.inspect.html_safe %>;
+$('#local_select').empty();
+$.each(options, function(i, p) {
+    $('#local_select').append($('<option></option>').val(p).html(p));
+});
+
+$('#local_select').change(local_f);
+
+  function local_f(){
+  		
+  document.getElementById("hidden_l").value = this.value;
   }
 
 </script>
