--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,32 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+div.layout {
+  text-align: center;
+}
+
+div.centre {
+  text-align: left;
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+
+}
+
+div.a {
+    text-align: center;
+    h1, h2 {
+    display: inline;
+} }
+
+
+div.b {
+    text-align: center;
+     }
+
 body{
     margin: 0;
     padding: 0;
