--- a/app/views/citta/index.html.erb
+++ b/app/views/citta/index.html.erb
@@ -1,3 +1,7 @@
+<% if user_signed_in? %>
+  <%= link_to "Profilo", edit_user_registration_path %> 
+  <% end %>
+
 <h1> Lista città </h1>
 
 <table border=1 width="20%" >
