--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,19 @@
-<h2>Modifica Profilo</h2>
+<%= link_to "Torna alla home", '/citta#index' %> 
 
+<div class="a">
+<h1> <%= current_user.nome%> <h1><h1> <%= current_user.cognome %> <h1>
+</div>
+
+
+<div class="b">
+<h2>Modifica Profilo</h2>
+</div>
+
+<div class="layout">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="centre">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -12,7 +22,7 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
+  <div class="centre">
     <%= f.label "password" %> <i>(Lascia vuoto se non vuoi cambiarla)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
@@ -21,14 +31,19 @@
     <% end %>
   </div>
 
-  <div class="field">
+  <div class="centre">
     <%= f.label "conferma password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="centre">
     <%= f.label "password corrente" %> <i>(la tua password corrente serve a confermare i cambiamenti)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
+  </div>
+
+  <div class="centre">
+    <%= f.label :via %><br />
+    <%= f.text_field :via %>
   </div>
 
   <div class="actions">
@@ -36,8 +51,11 @@
   </div>
 <% end %>
 
+
 <h3>Elimina Account</h3>
 
 <p>Non sei contento? <%= button_to "Elimina il mio account", registration_path(resource_name), data: { confirm: "Sei sicuro?" }, method: :delete %></p>
 
 <%= link_to "Indietro ", :back %>
+
+</div>
